Fix extra right-side whitespace on index on smallscreens

--- a/css/main.sass
+++ b/css/main.sass
@@ -67,6 +67,7 @@ body
   padding: 0
   position: relative
   width: 100%
+  @include box-sizing(border-box)
   @include respond-to(800)
     padding: 0 $rs
   .blog-logo
